--- a/theme/colours.css
+++ b/theme/colours.css
@@ -37,7 +37,7 @@ hr {
 }
 
 .search-header {
-	box-shadow: 0 0 10px #0075B0;
+	box-shadow: 0 0 10px #B0000F;
 }
 
 /* Round cornered boxes and backgrounds
