--- a/theme/colours.css
+++ b/theme/colours.css
@@ -5,7 +5,7 @@ Colours and backgrounds for common.css
 
 html, body {
 	color: #536482;
-	background-color: #F5F7FA;
+	background-color: #FAF6F5;
 }
 
 h1 {
