--- a/theme/colours.css
+++ b/theme/colours.css
@@ -341,7 +341,7 @@ ul.topiclist li.row dt a.subforum.unread {
 
 li.row {
 	border-top-color:  #FFFFFF;
-	border-bottom-color: #00608F;
+	border-bottom-color: #8F000C;
 }
 
 li.row strong {
