--- a/theme/colours.css
+++ b/theme/colours.css
@@ -993,11 +993,11 @@ fieldset.quick-login input.inputbox {
 }
 
 .inputbox:hover {
-	border-color: #11A3EA;
+	border-color: #EA1123;
 }
 
 .inputbox:focus {
-	border-color: #11A3EA;
+	border-color: #EA1123;
 	color: #0F4987;
 }
 
@@ -1045,7 +1045,7 @@ a.button1:hover, input.button1:hover, a.button2:hover, input.button2:hover, inpu
 
 /* Focus states */
 input.button1:focus, input.button2:focus, input.button3:focus {
-	border-color: #11A3EA;
+	border-color: #EA1123;
 	color: #0F4987;
 }
 
